# TP4

./: .gitignore  CMakeLists.txt
include/: Grille.h  Humain.h  IA.h  Ia.h  Jeux.h  Joueur.h  JoueurException.h  Morpion.h  Pion.h  Puissance4.h
src/: Grille.cpp  Humain.cpp  IA.cpp  Ia.cpp  Jeux.cpp  Joueur.cpp  JoueurException.cpp  Morpion.cpp  Pion.cpp  Puissance4.cpp  main.cpp
uml/: diagrammeDeClasse.puml
